--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": “ninorain22/aliyun-mns",
+    "name": "ninorain22/aliyun-mns",
     "description": "消息服务-阿里云 sdk-1.3.5版本composer扩展包",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": “ninodong”,
-            "email": “314320133@1qq.com"
+            "name": "ninodong",
+            "email": "314320133@1qq.com"
         }
     ],
     "require": {
