--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "ninodong",
-            "email": "314320133@1qq.com"
+            "email": "314320133@qq.com"
         }
     ],
     "require": {
